[gd_scene load_steps=8 format=3 uid="uid://ttfbnot35jyo"]

[ext_resource type="Script" uid="uid://c6215vuol8ms2" path="res://fade_transition_manager.gd" id="1_l81hk"]

[sub_resource type="Animation" id="Animation_v2583"]
resource_name = "FadeIn"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_i6ygh"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wav8x"]
_data = {
&"FadeIn": SubResource("Animation_v2583"),
&"RESET": SubResource("Animation_i6ygh")
}

[sub_resource type="Animation" id="Animation_l81hk"]
resource_name = "FadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wav8x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u35fc"]
_data = {
&"FadeOut": SubResource("Animation_l81hk"),
&"RESET": SubResource("Animation_wav8x")
}

[node name="FadeTransitionManager" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_l81hk")

[node name="FadeIn" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_wav8x")
}

[node name="FadeOut" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_u35fc")
}

[connection signal="animation_finished" from="FadeIn" to="." method="_on_fade_in_animation_finished"]
[connection signal="animation_finished" from="FadeOut" to="." method="_on_fade_out_animation_finished"]
